[metadata]
name = reconbf
author = HP security
summary = System configuration verifier
description-file = README.rst
classifier =
    Development Status :: 3 - Alpha
        Environment :: Console
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        Operating System :: OS Independent
        Programming Language :: Python
keywords =
    security
    hardening
    system
[files]
packages =
    reconbf
data_files =
    etc/reconbf = config/*
[entry_points]
console_scripts =
    reconbf = reconbf.rbf:main
