[metadata]
name = reconbf
author = HPE security
summary = System configuration verifier
description-file = README.rst
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: Security
    Topic :: Utilities
keywords =
    security
    hardening
    system
[files]
packages =
    reconbf
data_files =
    etc/reconbf = config/*
[entry_points]
console_scripts =
    reconbf = reconbf.__main__:main
